--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>id: <%= @tasks.id %> のメッセージ編集ページ</h1>
+<h1>id: <%= @task.id %> のメッセージ編集ページ</h1>
 
 <%= form_for(@tasks) do |f| %>
   <%= f.label :content, 'メッセージ' %>
@@ -7,4 +7,4 @@
   <%= f.submit '投稿' %>
 <% end %>
 
-<%= link_to '一覧に戻る', tasks_path %>
+<%= link_to '一覧に戻る', messages_path %>
