--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,20 @@
 <%= form_for(tasks) do |f| %>
+  <% if tasks.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+        <% tasks.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
+
+
   <%= f.label :content, 'メッセージ' %>
   <%= f.text_field :content %>
 
   <%= f.submit '投稿' %>
+  
 <% end %> 
