--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,7 +9,8 @@
     </div>
   <% end %>
 
-
+  <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status %>
 
 
   <%= f.label :content, 'メッセージ' %>
