--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,7 @@
 <h1>id: <%= @tasks.id %> のメッセージ詳細ページ</h1>
 
-<p><%= @tasks.content %></p>
+<p>ステータス: <%= @tasks.status %></p>
+<p>メッセージ: <%= @tasks.content %></p>
 
 <%= link_to '一覧に戻る', tasks_path %>
 <%= link_to 'このメッセージを編集する', edit_task_path(@tasks) %>
