--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,9 @@
 <h1>メッセージ一覧</h1>
 
 <ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> : <%= task.content %></li>
+    <% @tasks.each do |task| %>
+    <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
+   
   <% end %>
 </ul>
 
