新規投稿ページ修正

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,4 @@
-<h1>id: <%= @tasks.id %> のメッセージ詳細ページ</h1>
+<h1>id: <%= @tasks.id %> のタスク詳細ページ</h1>
 
 <p>ステータス: <%= @tasks.status %></p>
 <p>メッセージ: <%= @tasks.content %></p>
