--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,36 @@
-<h1>id: <%= @tasks.id %> のタスク詳細ページ</h1>
+<h1>id = <%= @tasks.id %> のタスク詳細ページ</h1>
 
+
+<!--
 <p>ステータス: <%= @tasks.status %></p>
 <p>メッセージ: <%= @tasks.content %></p>
-
 <%= link_to '一覧に戻る', tasks_path %>
 <%= link_to 'このメッセージを編集する', edit_task_path(@tasks) %>
 <%= link_to 'このメッセージを削除する', @tasks, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+-->
+
+
+
+<table class="table table-bordered">
+  <tr>
+    <th>id</th>
+    <td><%= @tasks.id %></td>
+  </tr>
+  <tr>
+    <th>ステータス</th>
+    <td><%= @tasks.status %></td>
+  </tr>
+  <tr>
+    <th>メッセージ</th>
+    <td><%= @tasks.content %></td>
+  </tr>
+</table>
+
+<%= link_to 'このメッセージを編集する', edit_task_path(@tasks), class: 'btn btn-default' %>
+<%= link_to 'このメッセージを削除する', @tasks, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
+
+
+
+
+
+
