--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,11 @@
+<div class="container">
+<div class="row">
+  <div class="col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6"> <!--センターに配置-->
+  
 <%= form_for(tasks) do |f| %>
   <% if tasks.errors.any? %>
-    <div id="error_explanation">
+    <div class="alert alert-warning">
+    <!--<div id="error_explanation"> -->
       <ul>
         <% tasks.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -9,13 +14,19 @@
     </div>
   <% end %>
 
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status %>
 
-
-  <%= f.label :content, 'メッセージ' %>
-  <%= f.text_field :content %>
-
-  <%= f.submit '投稿' %>
+    <div class="form-group">
+      <%= f.label :status, 'ステータス' %>
+      <%= f.text_field :status, class: 'form-control' %>
+    </div>
   
-<% end %> 
+    <div class="form-group">
+      <%= f.label :content, 'メッセージ' %>
+      <%= f.text_field :content, class: 'form-control' %>
+    </div>
+  
+    <%= f.submit '投稿', class: 'btn btn-primary' %>
+  
+    <% end %> 
+  </div>
+</div>
