--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,5 @@
+
+
 <header>
   <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
@@ -12,7 +14,7 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <!--<li><%= link_to  '新規タスクの投稿', new_task_path %></li>-->
+          <%# <li><%= link_to  '新規タスクの投稿', new_task_path %></li> %>
           <li><a href="#">Signup</a></li>
           <li><a href="#">Login</a></li>
         </ul>
