--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <%= render 'layouts/navbar' %>
 
     <div class="container">
-        <%= render 'layouts/flash_tasks' %>
+        <%= render 'layouts/flash_taskapps' %>
     
         <%= yield %>
     </div>    
