--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,6 @@
-<% if logged_in? %>
-<p>ログイン完了ユーザ: <%= current_user.name %></p>
-<% else %>
+
+<!--<%# <p>ログイン完了ユーザ: <%= current_user.name %></p> -->
+
 <div class="center jumbotron">
   <div class="text-center">
     <h1>Welcome to the Tasklist</h1>
