--- a/app/views/taskapps/new.html.erb
+++ b/app/views/taskapps/new.html.erb
@@ -1,12 +1,18 @@
+<div class="row">
+  <div class="col-xs-6">
+
 <h1>タスク新規作成ページ</h1>
 
 <%= form_for(@taskapp) do |f| %>
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :content %>
-  <%= f.label :content, 'メッセージ' %>
-  <%= f.text_field :status %>
-
-  <%= f.submit '投稿' %>
+  <div class="form-group">
+    <%= f.label :status, 'ステータス' %>
+    <%= f.text_field :status %>
+  </div>
+  <div class="form-group">
+    <%= f.label :content, 'メッセージ' %>
+    <%= f.text_field :content %>
+  </div>
+  <%= f.submit '投稿'%>
 <% end %>
 
 <%= link_to '一覧に戻る', taskapps_path %>
